infrastructure/prod2/gateways/config/gateway-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ksc-gateway-config-internal
  listeners:
    - name: wildcard-pingcap-net-http
      protocol: HTTP
      port: 80
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: All
    - name: wildcard-pingcap-net-https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-pingcap-net-cert
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: All
    - name: wildcard-pingcap-cn-https
      protocol: HTTPS
      port: 443
      hostname: "*.pingcap.cn"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-pingcap-cn-cert
      allowedRoutes:
        kinds:
          - group: gateway.networking.k8s.io
            kind: HTTPRoute
        namespaces:
          from: All
