infrastructure/prod2/gateways/config/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-https
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: ksc-gateway-config-public
  listeners:
    - name: wildcard-pingcap-net-https
      protocol: HTTPS
      port: 443
      hostname: "*.pingcap.net"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-pingcap-net-cert
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
